--- a/src/settings.html
+++ b/src/settings.html
@@ -177,6 +177,13 @@
             border-radius: 4px;
             box-sizing: border-box;
         }
+        .color-preset {
+            width: 24px;
+            height: 24px;
+            border-radius: 4px;
+            cursor: pointer;
+            border: 1px solid #ddd;
+        }
     </style>
 </head>
 <body>
@@ -238,6 +245,23 @@
                     Examples: Cmd+1, Ctrl+Shift+A, Alt+F1, etc.
                 </small>
             </div>
+            <div class="form-group">
+                <label for="macro-color">Color Theme:</label>
+                <div style="display: flex; gap: 10px; align-items: center;">
+                    <input type="color" id="macro-color" value="#4CAF50" style="width: 50px; height: 40px; border: 1px solid #ddd; border-radius: 4px; cursor: pointer;">
+                    <div style="display: flex; gap: 8px;">
+                        <div class="color-preset" data-color="#4CAF50" style="background: #4CAF50;"></div>
+                        <div class="color-preset" data-color="#2196F3" style="background: #2196F3;"></div>
+                        <div class="color-preset" data-color="#FF9800" style="background: #FF9800;"></div>
+                        <div class="color-preset" data-color="#9C27B0" style="background: #9C27B0;"></div>
+                        <div class="color-preset" data-color="#F44336" style="background: #F44336;"></div>
+                        <div class="color-preset" data-color="#795548" style="background: #795548;"></div>
+                    </div>
+                </div>
+                <small style="color: #666; display: block; margin-top: 5px;">
+                    Choose a color for the notification theme
+                </small>
+            </div>
             <div style="text-align: right; margin-top: 20px;">
                 <button class="btn btn-danger" onclick="hideAddMacroModal()">Cancel</button>
                 <button class="btn btn-success" onclick="addMacro()" id="create-macro-btn" disabled>Create Macro</button>
@@ -254,6 +278,14 @@
         document.addEventListener('DOMContentLoaded', () => {
             loadMacros();
             loadSettings();
+
+            // Add click handlers for color presets
+            document.querySelectorAll('.color-preset').forEach(preset => {
+                preset.addEventListener('click', () => {
+                    const color = preset.dataset.color;
+                    document.getElementById('macro-color').value = color;
+                });
+            });
         });
 
         function loadMacros() {
@@ -311,6 +343,7 @@
         function addMacro() {
             const name = document.getElementById('macro-name').value.trim();
             const hotkey = document.getElementById('macro-hotkey').value.trim();
+            const color = document.getElementById('macro-color').value;
 
             if (!name || !hotkey) {
                 alert('Please fill in both name and hotkey');
@@ -328,6 +361,7 @@
                 id: Date.now().toString(),
                 name: name,
                 hotkey: hotkey,
+                color: color,
                 area: null
             };
 
